<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="IpAddress">Ip Address</string>
	
    
    <string name="URL">URL</string>
    <string name="app_name">SOA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="log_out">Log Out</string>
    <string name="logging_out">Logging Out</string>
    <string name="Logged_in">Logging in</string>
    <string name="cannot_logout">Cannot LogOut</string>
    <string name="cannot_login">Cannot Login</string>
    <string name="HostConnRefused">Host Connection refused.Please check the network connection</string>
   	<string name="MobileNumberConflict">User with the same mobile number exists</string>
   	<string name="EditSuccess">Successfully Edited</string>
   	<string name="AdditionSuccess">Successfully Added</string>
   	<string name="CreditSuccess">Successfully credited</string>
   	<string name="DebitSuccess">Successfully debited</string>
   	<string name="DisableSuccess">Successfully disabled</string>
   	<string name="EditUnsuccess">Cannot edit the User data</string>
   	<string name="AdditionUnsuccess">Adding the User failed</string>
   	<string name="CreditUnsuccess">Credit Unsuccessful</string>
   	<string name="DebitUnsuccess">Debit Unsuccessful</string>
   	<string name="DisableUnsuccess">Disabing the user failed</string>
   	<string name="CannotFetchUsers">Cannot fetch the Users</string>
   	<string name="CannotFetchTransactions">Cannot fetch Transactions</string>
   	<string name="NoDataReceived">No data received</string>
   	<string name="NoTransactions">No Transactions</string>
   	<string name="refresh_users">Refresh Users</string>
    <string name="RefreshedUsers">Refreshed Users</string>
    <string name="Username">User name</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="RememberMe">Remember me</string>
    <string name="ForceLogout_Prompt">Session Expired.Please Login </string>
    <string name="SessionExpired">Session Expired.Please Login</string>
    <string name="URLChanged">URL Changed.Please Login </string>
    <string name="addUser">+USER</string>
    <string name="Recharge">RECHARGE</string>
    <string name="SaveChanges">Save Changes</string>
    <string name="Users">USERS</string>
    <string name="swifiic">SWIFIIC</string>
    <string name="place_holder">PLACE HOLDER</string>
    <string name="Name">Name</string>
    <string name="Alias">Alias</string>
    <string name="Address">Address</string>
    <string name="EmailAddress">EmailAddress</string>
    <string name="Phone">Phone  +91-</string>
    <string name="MAC">MAC</string>
    <string name="Notes">Notes</string>
    <string name="ChangesWillBeLost">Changes will be lost..!!</string>
    <string name="Ok">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="ConfirmDelete">Confirm Delete..!!</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="Credit">Credit</string>
    <string name="Debit">Debit</string>
    <string name="AmtToCredit">Amount to credit</string>
    <string name="RechargeAmount">Recharge Amount</string>
    <string name="UserId">User Id</string>
    <string name="RemainingCredits">Remaining Credits</string>
    <string name="LastAudit">Last Audit</string>
    <string name="AreUSure">Are you sure??</string>
    <string name="RechargeUser">Recharge User</string>
    <string name="FirstName">First Name</string>
    <string name="ShortAlias">short-alias</string>
    <string name="AddressMultiLine">Address Multi-line</string>
    <string name="MACAddress">MAC Address</string>
    <string name="NotesMultiline">Notes Multi-line</string>
    <string name="Transactions">Transactions</string>
    <string name="DtnId">Dtn Id</string>
    
    
    <!-- abhishek for build details intial values are place holders -->
<<<<<<< HEAD
    <string name="app_build_date">20170919</string>
    <string name="app_build_ctx">nic-ThinkPad /home/nic/swifiic/repo/plat/app/soa/andi root</string>
=======
    <string name="app_build_date">20170819</string>
    <string name="app_build_ctx">nic-ThinkPad /home/nic/swifiic/repo/plat/app/soa/andi nic</string>
>>>>>>> 02fc46f629ab71f0112c295090a18c17f506d24d
    
    
    
    
    
    
    
   

</resources>
