<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/login_bckgrnd"
    >
 
 <LinearLayout 
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     
     android:orientation="vertical"
     >
 <LinearLayout 
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:weightSum="4"
     android:orientation="horizontal"
     >
 <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text = "@string/MobileNumber"
        android:textSize="20sp"
        android:textColor="#FFF" />
 <AutoCompleteTextView
        android:id="@+id/atvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:inputType="phone"
        android:textColor="#FFF"/>
</LinearLayout>
 <LinearLayout 
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:weightSum="4"
     android:orientation="horizontal"
     >
 <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text = "@string/Password"
        android:textSize="20sp"
        android:textColor="#FFF" />
 <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:inputType="textPassword"
        android:textColor="#FFF" />
</LinearLayout>
<CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/RememberMe"
        android:textSize="15sp"
        android:textColor="#FFF" 
        android:checked="false"
        />   

<Button 
    android:id="@+id/bLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text = "@string/Login"
    />
</LinearLayout>      
 </RelativeLayout>
    
 