<?xml version="1.0" encoding="utf-8"?>


<FrameLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addUserLayout"
    android:layout_height = "match_parent"
    android:background="#eebeee"
    android:layout_width="match_parent">
<!--  android:background="#eebeee" -->
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout 
    android:layout_height = "match_parent"
    android:layout_width = "match_parent"
    android:orientation="vertical"
    >
    
<GridLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:orientation="vertical"
    android:rowCount="10" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_column="0"
        android:layout_gravity="right|center"
        android:layout_row="0"
        android:text="@string/Name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="190dp"
        android:layout_column="1"
        android:layout_gravity="left|center"
        android:layout_row="0"
        android:ems="10"
        android:hint="@string/FirstName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_column="0"
        android:layout_gravity="right|center"
        android:layout_row="1"
        android:text="@string/Alias"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextAlias"
        android:layout_width="190dp"
        android:layout_column="1"
        android:layout_gravity="left|center"
        android:layout_row="1"
        android:ems="10"
        android:hint="@string/ShortAlias" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|center"
        android:textStyle="bold"
        android:layout_row="2"
        android:text="@string/Address"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:layout_rowSpan="2"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/AddressMultiLine" />
	
    <TextView
        android:id="@+id/textViewEmailAddress"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|center"
        android:textStyle="bold"
        android:layout_row="4"
        android:text="@string/EmailAddress"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_height="wrap_content"
        android:layout_width="190dp"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/EmailAddress"
         />
    
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|center"
        android:textStyle="bold"
        android:layout_row="5"
        android:text="@string/Phone"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="190dp"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="5"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/MobileNumber" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="right|center"
        android:textStyle="bold"
        android:layout_row="7"
        android:text="@string/Notes"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextNotes"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="left|top"
        android:layout_row="7"
        android:layout_rowSpan="2"
        android:ems="10"
        android:hint="@string/NotesMultiline"
        android:inputType="textMultiLine" />


</GridLayout>
<LinearLayout
    android:layout_width= "match_parent"
    android:layout_height= "match_parent"
    android:layout_marginTop="15dp"
    android:weightSum="8"
    android:orientation = "vertical">

<LinearLayout
    android:layout_width= "match_parent"
    android:layout_height= "wrap_content"
    android:layout_weight = "2"
    android:weightSum="3"
    android:orientation = "horizontal">
    
    
<ImageView
        android:id="@+id/imageView1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center|top"
        android:src="@drawable/userimg" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_height ="40dp"
        android:layout_width ="40dp"
        android:layout_gravity="top"
        android:src="@android:drawable/ic_menu_camera" />
    <ImageButton
        android:id="@+id/ibDeleteImage1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top"
        android:src="@drawable/ic_delete" />
	
    </LinearLayout>

<LinearLayout
    android:layout_width= "match_parent"
    android:layout_height= "wrap_content"
    android:layout_weight = "2"
    android:weightSum="3"
    android:orientation = "horizontal">
 
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icon_id_a" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_gravity="center_horizontal|top"
        android:layout_height ="40dp"
        android:layout_width ="40dp"
        android:src="@android:drawable/ic_menu_camera" />
	 <ImageButton
        android:id="@+id/ibDeleteImage2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top"
        android:src="@drawable/ic_delete" />

</LinearLayout>
<LinearLayout
    android:layout_width= "match_parent"
    android:layout_height= "wrap_content"
    android:layout_weight = "2"
    android:weightSum="3"
    android:orientation = "horizontal">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center|top"
        android:src="@drawable/passport" />
    
    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_height ="40dp"
        android:layout_width ="40dp"
        android:layout_gravity="left|top"
        android:src="@android:drawable/ic_menu_camera" />
    <ImageButton
        android:id="@+id/ibDeleteImage3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top"
        android:src="@drawable/ic_delete" />
   </LinearLayout> 

   <LinearLayout
    android:layout_width= "match_parent"
    android:layout_height= "wrap_content"
    android:layout_weight = "2"
    android:weightSum="2"
    android:orientation = "horizontal">

    <ImageButton
        android:id="@+id/imageButtonUndo"
        android:layout_weight="1"
        android:layout_width ="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:src="@android:drawable/ic_menu_revert" />

    <ImageButton
        android:id="@+id/imageButtonCancel"
        android:layout_weight="1"
        android:layout_height ="wrap_content"
        android:layout_width ="wrap_content"
        android:layout_gravity="left|top"
        android:src="@android:drawable/btn_dialog" />
    </LinearLayout>
     <ImageButton
        android:id="@+id/imageButtonCommit"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:src="@android:drawable/checkbox_on_background" />
</LinearLayout>
</LinearLayout>
</ScrollView>
</FrameLayout>
